; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/common/extr_d3d_common.c_d3d_translate_filter.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/common/extr_d3d_common.c_d3d_translate_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@D3D_TEXTURE_FILTER_LINEAR = common dso_local global i32 0, align 4
@D3D_TEXTURE_FILTER_POINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @d3d_translate_filter(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %18 [
    i32 128, label %6
    i32 130, label %15
    i32 129, label %17
  ]

6:                                                ; preds = %1
  %7 = call %struct.TYPE_5__* (...) @config_get_ptr()
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** %4, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %6
  br label %18

14:                                               ; preds = %6
  br label %15

15:                                               ; preds = %1, %14
  %16 = load i32, i32* @D3D_TEXTURE_FILTER_LINEAR, align 4
  store i32 %16, i32* %2, align 4
  br label %20

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %1, %17, %13
  %19 = load i32, i32* @D3D_TEXTURE_FILTER_POINT, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %15
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local %struct.TYPE_5__* @config_get_ptr(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
